# Reiji

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build-docs.yml  build-on-linux.yml  build-on-mac.yml  build-on-posix.yml  build-on-windows.yml  cmake.yml
cmake/: ReijiConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.in  building.rst  conf.py  index.rst  macros.rst  symbol.rst  unique_shared_lib.rst
include/reiji/: flags.hpp  symbol.hpp  unique_shared_lib.hpp
include/reiji/detail/: invalid_symbol_access.hpp  pop_platform_detection_macros.hpp  push_platform_detection_macros.hpp
src/: symbol.cpp  unique_shared_lib.cpp
tests/: CMakeLists.txt  export.hpp  lib1.cpp  lib2.cpp  main.cpp  symbol.cpp  usl.cpp
